show next/prev buttons for fluff images, show filename (WIP)